add_subdirectory(pedal_buffer)
add_subdirectory(pedal_sideband)
add_subdirectory(pedal_chorus)
add_subdirectory(pedal_reverb)
add_subdirectory(pedal_tape)
add_subdirectory(pedal_phaser)
add_subdirectory(pedal_planets)
add_subdirectory(pedal_distortion)
add_subdirectory(pedal_looper)
add_subdirectory(pedal_roomreverb)
add_subdirectory(pedal_distreverb)
