add_subdirectory(pedal_pico_buffer)
add_subdirectory(pedal_pico_chorus)
add_subdirectory(pedal_pico_sideband)
add_subdirectory(pedal_pico_reverb)
add_subdirectory(pedal_pico_tape)
add_subdirectory(pedal_pico_phaser)
add_subdirectory(pedal_pico_planets)
add_subdirectory(pedal_pico_distortion)
add_subdirectory(pedal_pico_looper)
add_subdirectory(pedal_pico_sustain)
add_subdirectory(pedal_pico_tremolo)
